--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         </div>
     </nav>
 
-    <!-- Main Content Section -->
+    <!-- Main Content Secti-->
+
     <section id="services">
         <div class="container">
             <h2>Service Categories</h2><br><br><br>
@@ -42,7 +43,7 @@
 
                 <div class="category">
                     <a href="C:\Users\Willson\Desktop\example Pro\example Pro\categoty1.html">
-                    <img src="C:\Users\Willson\Desktop\example Pro\example Pro\image1.jpg" alt="Category 2">
+                    <img src="image1.jpg" alt="Category 2">
                     <h3>Programming</h3></a>
                     <p>Enjoy the advanced expertise of a distinguished group of programmers, where creativity and innovation exist</p>
                 </div>
