delete old files

--- a/categoty1.html
+++ b/categoty1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="example.css">
-    <title>Document</title>
+    <title>Profiles Page</title>
 </head>
 <body>
     <nav>
@@ -30,29 +30,46 @@
 <br>
 <br>
             <!-- Individual Profiles -->
+            <div class="profiles-container">
             <div class="profile">
-                <img src="C:\Users\Willson\Desktop\example Pro\example Pro\image1.jpg" alt="Person 1">
+                <a href="offers.html">
+                <img src="image6.jpg" alt="Person 1">
                 <h3>John Doe</h3>
+                </a>
             </div>
 
             <div class="profile">
-                <img src="C:\Users\Willson\Desktop\example Pro\example Pro\image1.jpg" alt="Person 2">
+                <a href="offers.html">
+                <img src="image8.jpg" alt="Person 2">
                 <h3>Lara Smith</h3>
-            </div>
-            <div class="profile">
-                <img src="C:\Users\Willson\Desktop\example Pro\example Pro\image1.jpg" alt="Person 1">
-                <h3>Mohhamed Salem</h3>
+                </a>
             </div>
 
             <div class="profile">
-                <img src="C:\Users\Willson\Desktop\example Pro\example Pro\image1.jpg" alt="Person 2">
+                <a href="offers.html">
+                <img src="image8.jpg" alt="Person 2">
                 <h3>Sali Ahmad</h3>
+                </a>
             </div>
-            <!-- Add more profiles as needed -->
 
+            <div class="profile">
+                <a href="offers.html">
+                <img src="image6.jpg" alt="Person 1">
+                <h3>Mohhamed Salem</h3>
+                </a>
+            </div>
+
+            
+            <!-- Add more profiles as needed -->
+        </div>
         </div>
     </section>
 
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 My Services. All rights reserved.</p>
+        </div>
+    </footer>
     
 </body>
 </html>
