--- a/index.html
+++ b/index.html
@@ -30,50 +30,52 @@
 
     <section id="services">
         <div class="container">
-            <h2>Service Categories</h2><br><br><br>
+            <h2>Service Categories</h2>
 
             <!-- Service Categories -->
             <div class="categories-container">
                 <div class="category">
-                    <a href="C:\Users\Willson\Desktop\example Pro\example Pro\categoty1.html">
-                    <img src="C:\Users\Willson\Desktop\example Pro\example Pro\image4.jpg" alt="Category 1" height="150" width="150">
+
+
+                    <a href="categoty1.html">
+                    <img src="images5.jpeg" alt="Category 1" >
                     <h3>Cooking</h3></a>
                     <p>Enjoy a distinguished collection of chefs with delicious and harmonious flavours</p>
                 </div>
 
                 <div class="category">
-                    <a href="C:\Users\Willson\Desktop\example Pro\example Pro\categoty1.html">
-                    <img src="image1.jpg" alt="Category 2">
+                    <a href="categoty1.html">
+                    <img src="images6.jpeg" alt="Category 2">
                     <h3>Programming</h3></a>
                     <p>Enjoy the advanced expertise of a distinguished group of programmers, where creativity and innovation exist</p>
                 </div>
 
 
                 <div class="category">
-                    <a href="C:\Users\Willson\Desktop\example Pro\example Pro\categoty1.html">
-                    <img src="C:\Users\Willson\Desktop\example Pro\example Pro\image2.jpg" alt="Category 2">
+                    <a href="categoty1.html">
+                    <img src="image2.jpg" alt="Category 2" width="200px" height="200px">
                     <h3>Maintenance</h3></a>
                     <p>Experience maintenance excellence, ensuring seamless operations and peak performance with our expert touch for precision and reliability</p>
                 </div>
 
 
                 <div class="category">
-                    <a href="C:\Users\Willson\Desktop\example Pro\example Pro\categoty1.html">
-                    <img src="C:\Users\Willson\Desktop\example Pro\example Pro\download.png" alt="Category 2" height="250" width="250">
+                    <a href="categoty1.html">
+                    <img src="download.png" alt="Category 2" height="250" width="250">
                     <h3>Digital Marketing</h3></a>
                     <p>Revolutionize your brand’s online presence with our cutting-edge digital marketing solutions.”</p>
                 </div>
 
                 <div class="category">
-                    <a href="C:\Users\Willson\Desktop\example Pro\example Pro\categoty1.html">
-                    <img src="C:\Users\Willson\Desktop\example Pro\example Pro\image3.jpg" alt="Category 2" height="150" width="150">
+                    <a href="categoty1.html">
+                    <img src="image3.jpg" alt="Category 2" height="150" width="150">
                     <h3>Cleaning</h3></a>
                     <p>Discover the joy of bright spaces! Elevate your surroundings with our precision cleaning expertise.</p>
                 </div>
 
                 <div class="category">
-                    <a href="C:\Users\Willson\Desktop\example Pro\example Pro\categoty1.html">
-                    <img src="C:\Users\Willson\Desktop\example Pro\example Pro\image5.jpg" alt="Category 2" height="150" width="150">
+                    <a href="categoty1.html">
+                    <img src="image5.jpg" alt="Category 2" height="150" width="150">
                     <h3>Writing and translation</h3></a>
                     <p>Explore the art of storytelling and seamless communication through our writing and translation services, where ideas come to life and languages unite</p>
                 </div>
