--- a/offers.html
+++ b/offers.html
@@ -28,7 +28,7 @@
 
     <section id="offers">
         <div class="container">
-            <h2>Featured Offers</h2>
+            <h2>Featured Offers.</h2>
 
             <!-- Individual Offers -->
             <div class="offers-container">
